--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,4 @@
 VUE_APP_DJANGO_API_SERVER_URL=http://127.0.0.1:8000/
 VUE_APP_SPRING_API_SERVER_URL=http://localhost:8080/
+VUE_APP_CLIENT_URL=http://localhost:3000/
 VUE_APP_IMAGE_SERVER=https://catheroes.s3.ap-northeast-2.amazonaws.com/
