--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "vue-clickaway": "2.2.2",
     "vue-cookies": "^1.7.2",
     "vue-daum-map": "^1.0.15",
+    "vue-infinite-loading": "^2.4.5",
     "vue-kakao-login": "^1.0.5",
     "vue-lazyload": "1.3.3",
     "vue-material": "1.0.0-beta-14",
