--- a/backend/bin/pom.xml
+++ b/backend/bin/pom.xml
@@ -20,6 +20,12 @@
 	</properties>
 
 	<dependencies>
+		<!-- <dependency> <groupId>org.springframework.boot</groupId> <artifactId>spring-boot-starter-web</artifactId> 
+			<exclusions> <exclusion> <groupId>org.springframework.boot</groupId> <artifactId>spring-boot-starter-logging</artifactId> 
+			</exclusion> </exclusions> </dependency> <dependency> <groupId>org.springframework.boot</groupId> 
+			<artifactId>spring-boot-starter-log4j2</artifactId> </dependency> -->
+
+
 		<!-- news crawling -->
 		<dependency>
 			<groupId>org.jsoup</groupId>
@@ -47,14 +53,12 @@
 			<version>20180813</version>
 		</dependency>
 		<!-- Spring Security -->
-		<!-- <dependency> 
-			<groupId>org.springframework.boot</groupId> 
-			<artifactId>spring-boot-starter-security</artifactId> 
-		</dependency> -->
+		<!-- <dependency> <groupId>org.springframework.boot</groupId> <artifactId>spring-boot-starter-security</artifactId> 
+			</dependency> -->
 		<!-- OAuth2 Client -->
 		<dependency>
-		    <groupId>org.springframework.security</groupId>
-		    <artifactId>spring-security-oauth2-client</artifactId>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-oauth2-client</artifactId>
 		</dependency>
 		<!-- lombok -->
 		<dependency>
@@ -108,24 +112,31 @@
 			<artifactId>scribejava-apis</artifactId>
 			<version>5.6.0</version>
 		</dependency>
-	
+
 		<dependency>
 			<groupId>com.github.scribejava</groupId>
 			<artifactId>scribejava-core</artifactId>
 			<version>5.6.0</version>
 		</dependency>
-	
+
 		<dependency>
 			<groupId>org.springframework.social</groupId>
 			<artifactId>spring-social-google</artifactId>
 			<version>1.0.0.RELEASE</version>
 		</dependency>
-		   <!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-s3 -->
-      <dependency>
-         <groupId>com.amazonaws</groupId>
-         <artifactId>aws-java-sdk</artifactId>
-         <version>1.11.163</version>
-      </dependency>
+		<!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-s3 -->
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk</artifactId>
+			<version>1.11.163</version>
+		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+		</dependency>
+
+
+
 	</dependencies>
 
 	<build>
