--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -17,3 +17,18 @@ amazonProperties.secretKey=zdtM6reHcE+5XbA2YxroXlKHap2Wn2u+S3zH7c/l
 amazonProperties.bucketName=catheroes
 amazonProperties.endpointUrl=s3-website.ap-northeast-2.amazonaws.com
 cloud.aws.stack.auto=false 
+
+#SSL
+#server.ssl.key-store=/etc/letsencrypt/live/i3d206.p.ssafy.io/keystore.p12
+#server.ssl.key-store-password=ssafy
+#server.ssl.keyStoreType=PKCS12
+#server.ssl.keyAlias=tomcat
+
+#server.port=8443
+
+#spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=\uBC1C\uC2E0\uC778\uBA54\uC77C@gmail.com   ex) hodoo.tistory@gmail.com
+spring.mail.password=\uBC1C\uC2E0\uC778\uBA54\uC77C\uC758 \uBE44\uBC00\uBC88\uD638   ex) password
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
