--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -53,8 +53,10 @@
 			<version>20180813</version>
 		</dependency>
 		<!-- Spring Security -->
-		<!-- <dependency> <groupId>org.springframework.boot</groupId> <artifactId>spring-boot-starter-security</artifactId> 
-			</dependency> -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
 		<!-- OAuth2 Client -->
 		<dependency>
 			<groupId>org.springframework.security</groupId>
@@ -77,7 +79,10 @@
 			<artifactId>jjwt</artifactId>
 			<version>0.7.0</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
