--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,7 +27,9 @@
     "vue-kakao-login": "^1.0.5",
     "vue-lazyload": "1.3.3",
     "vue-material": "1.0.0-beta-14",
-    "vue-router": "3.1.3"
+    "vue-router": "3.1.3",
+    "vue-session": "^1.0.0",
+    "yarn": "^1.22.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "4.1.1",
