--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -19,9 +19,9 @@ amazonProperties.endpointUrl=s3-website.ap-northeast-2.amazonaws.com
 cloud.aws.stack.auto=false 
 
 #SSL
-#server.ssl.key-store=/etc/letsencrypt/live/i3d206.p.ssafy.io/keystore.p12
-#server.ssl.key-store-password=ssafy
-#server.ssl.keyStoreType=PKCS12
-#server.ssl.keyAlias=tomcat
+server.ssl.key-store=/etc/letsencrypt/live/i3d206.p.ssafy.io/keystore.p12
+server.ssl.key-store-password=ssafy
+server.ssl.keyStoreType=PKCS12
+server.ssl.keyAlias=tomcat
 
-#server.port=8443
+server.port=8443
