--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -10,8 +10,8 @@
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.web.blog</groupId>
-	<artifactId>webBlog</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<artifactId>CatHeroes</artifactId>
+	<version>v1.0</version>
 	<name>webBlog</name>
 	<description>Web blog project for Spring Boot</description>
 
@@ -19,13 +19,7 @@
 		<java.version>1.8</java.version>
 	</properties>
 
-	<dependencies>
-		<!-- <dependency> <groupId>org.springframework.boot</groupId> <artifactId>spring-boot-starter-web</artifactId> 
-			<exclusions> <exclusion> <groupId>org.springframework.boot</groupId> <artifactId>spring-boot-starter-logging</artifactId> 
-			</exclusion> </exclusions> </dependency> <dependency> <groupId>org.springframework.boot</groupId> 
-			<artifactId>spring-boot-starter-log4j2</artifactId> </dependency> -->
-
-
+	<dependencies>		
 		<!-- news crawling -->
 		<dependency>
 			<groupId>org.jsoup</groupId>
@@ -149,9 +143,6 @@
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 		</dependency>
-
-
-
 	</dependencies>
 
 	<build>
