--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,32 +1,30 @@
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://i3d206.p.ssafy.io:3306/ssafydb?autoReconnect=true&useUnicode=true&characterEncoding=utf8
-spring.datasource.username=ssafy
-spring.datasource.password=ssafy
+#DB
+spring.datasource.driverClassName= 
+spring.datasource.url=
+spring.datasource.username=
+spring.datasource.password=
 
+spring.devtools.livereload.enabled=
+
+# JPA
 spring.jpa.hibernate.use-new-id-generator-mappings=false
-
-spring.devtools.livereload.enabled=true
 spring.jpa.properties.hibernate.show_sql=true
-
 spring.jpa.hibernate.ddl-auto= validate
 
 # AWS
-amazonProperties.accessKey=AKIAUGQN3IL7JGVG2VUW
-amazonProperties.secretKey=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
+amazonProperties.accessKey=
+amazonProperties.secretKey=
 # AWS S3 bucket
-amazonProperties.bucketName=catheroes
-amazonProperties.endpointUrl=s3-website.ap-northeast-2.amazonaws.com
-cloud.aws.stack.auto=false 
+amazonProperties.bucketName=
+amazonProperties.endpointUrl=
+cloud.aws.stack.auto=
 
 #SSL
-server.ssl.key-store=/etc/letsencrypt/live/i3d206.p.ssafy.io/keystore.p12
-server.ssl.key-store-password=ssafy
-server.ssl.keyStoreType=PKCS12
-server.ssl.keyAlias=tomcat
+server.ssl.key-store=
+server.ssl.key-store-password=
+server.ssl.keyStoreType=
+server.ssl.keyAlias=
 
 server.port=8443
-<<<<<<< HEAD
 
 spring.servlet.multipart.max-file-size=-1
-=======
->>>>>>> c2e4a83b5814720ba46994196e2e4c6b3ba1d83d
