--- a/frontend/.env
+++ b/frontend/.env
@@ -1,8 +1,5 @@
-<<<<<<< HEAD
-VUE_APP_DJANGO_API_SERVER_URL=http://catheroes.tk:8000/
-=======
-VUE_APP_DJANGO_API_SERVER_URL=http://kastori.synology.me:8000/
->>>>>>> c2e4a83b5814720ba46994196e2e4c6b3ba1d83d
-VUE_APP_SPRING_API_SERVER_URL=http://i3d206.p.ssafy.io/api/v1/
-VUE_APP_CLIENT_URL=http://localhost:3000/
-VUE_APP_IMAGE_SERVER=https://catheroes.s3.ap-northeast-2.amazonaws.com/
+
+VUE_APP_DJANGO_API_SERVER_URL= "머신러닝 서버"
+VUE_APP_SPRING_API_SERVER_URL= "스프링 백엔드 서버"
+VUE_APP_CLIENT_URL= "뷰 서버"
+VUE_APP_IMAGE_SERVER= "이미지 서버"
