--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 *.h5 filter=lfs diff=lfs merge=lfs -text
 *.weights filter=lfs diff=lfs merge=lfs -text
+django_keras/keras_drf/yolov3.weights filter=lfs diff=lfs merge=lfs -text
